[gd_scene load_steps=2 format=3 uid="uid://b8vwcq7x3kp4f"]

[ext_resource type="Script" path="res://ui/ChatWindow.gd" id="1_1"]

[node name="ChatWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="ChatLog" type="RichTextLabel" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
text = ""
bbcode_enabled = true
scroll_following = true

[node name="InputBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="InputLine" type="LineEdit" parent="VBox/InputBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type a message..."

[node name="SendButton" type="Button" parent="VBox/InputBox"]
layout_mode = 2
text = "Send"

